--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
     "semi": true,
-    "singleQuote": true,
+    "singleQuote": false,
     "trailingComma": "es5",
     "tabWidth": 4,
-    "printWidth": 80
+    "printWidth": 110
 }
