--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@mui/material": "^7.0.1",
     "@uidotdev/usehooks": "^2.4.1",
     "formik": "^2.4.6",
