--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "sass": "^1.86.2",
+    "sonner": "^2.0.3",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
